add new website from server na

--- a/xem-phim-bo/bang-tuyet-dao/index.html
+++ b/xem-phim-bo/bang-tuyet-dao/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1760,62 +1760,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuu-chau-thanh-hanh-ki" title="Cửu Châu Thanh Hạnh Kỉ">
+          <a class="list-top-movie-link" href="/phim-moi/tieu-thap-nhat-lang" title="Tiêu Thập Nhất Lang">
            <span class="status">
-            HD Vietsub
+            SD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuu-chau-thanh-hanh-ki-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieu-thap-nhat-lang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cửu Châu Thanh Hạnh Kỉ
+             Tiêu Thập Nhất Lang
             </span>
             <span class="list-top-movie-item-en">
-             Novo Land Floating Heart
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cai-gia-cua-long-tham" title="Cái Giá Của Lòng Tham">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cai-gia-cua-long-tham-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cái Giá Của Lòng Tham
-            </span>
-            <span class="list-top-movie-item-en">
-             Tumbbad
-            </span>
-            <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/deaf-u-dai-hoc-cho-nguoi-diec" title="Deaf U: Đại học cho người điếc">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/deaf-u-dai-hoc-cho-nguoi-diec-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Deaf U: Đại học cho người điếc
-            </span>
-            <span class="list-top-movie-item-en">
-             Deaf U
+             Treasure Raiders
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1826,18 +1782,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bai-bien-paradise" title="Bãi biển Paradise">
+          <a class="list-top-movie-link" href="/phim-moi/xa-vuong-tai-hoa-ap-den-chay-hay-la-chet" title="Xà Vương | Tai Họa Ập Đến, Chạy Hay Là Chết?">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-bien-paradise-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xa-vuong-tai-hoa-ap-den-chay-hay-la-chet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bãi biển Paradise
+             Xà Vương | Tai Họa Ập Đến, Chạy Hay Là Chết?
             </span>
             <span class="list-top-movie-item-en">
-             Paradise Beach
+             King of Snake
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dieu-bi-mat" title="Điều Bí Mật">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-bi-mat-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Điều Bí Mật
+            </span>
+            <span class="list-top-movie-item-en">
+             Subterranea
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1848,21 +1826,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-chua-gia-dao-2" title="Công Chúa Giá Đáo">
+          <a class="list-top-movie-link" href="/phim-moi/scott-pilgrim-cat-canh" title="Scott Pilgrim cất cánh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-chua-gia-dao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/scott-pilgrim-cat-canh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Công Chúa Giá Đáo
+             Scott Pilgrim cất cánh
             </span>
             <span class="list-top-movie-item-en">
-             The Princess Come Across
+             Scott Pilgrim Takes Off
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-tho-sau-nhat" title="Hơi thở sâu nhất">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-tho-sau-nhat-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hơi thở sâu nhất
+            </span>
+            <span class="list-top-movie-item-en">
+             The Deepest Breath
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
