add new website from server na

--- a/xem-phim-moi/dep-trai-thay-sai-sai/index.html
+++ b/xem-phim-moi/dep-trai-thay-sai-sai/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             14
+             15
             </dd>
             <br/>
            </dl>
@@ -1773,18 +1773,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trung-tu" title="Trùng Tử">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-my-nhan-2" title="Cuộc Chiến Mỹ Nhân">
            <span class="status">
-            FHD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trung-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-my-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trùng Tử
+             Cuộc Chiến Mỹ Nhân
             </span>
             <span class="list-top-movie-item-en">
-             The Journey Of Chongzi
+             Mei Ren She
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1795,18 +1795,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-trai-ben-mai-hien" title="Bạn Trai Bên Mái Hiên">
+          <a class="list-top-movie-link" href="/phim-moi/ven-man-su-that-phan-1" title="Vén Màn Sự Thật (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-trai-ben-mai-hien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ven-man-su-that-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạn Trai Bên Mái Hiên
+             Vén Màn Sự Thật (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             My Husky Boyfriend
+             Truth Be Told (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1817,18 +1817,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huyen-thoai-dracula" title="Huyền Thoại Dracula">
+          <a class="list-top-movie-link" href="/phim-moi/la-phieu-mua-hang" title="Lá Phiếu Mua Hàng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huyen-thoai-dracula-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/la-phieu-mua-hang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Huyền Thoại Dracula
+             Lá Phiếu Mua Hàng
             </span>
             <span class="list-top-movie-item-en">
-             Dracula
+             섹스 이용권
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1839,21 +1839,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khuynh-thanh-sung-phi" title="Khuynh Thành Sủng Phi">
+          <a class="list-top-movie-link" href="/phim-moi/thao-xich-danny-doi-cho" title="Tháo Xích – Danny Đời Chó">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khuynh-thanh-sung-phi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thao-xich-danny-doi-cho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khuynh Thành Sủng Phi
+             Tháo Xích – Danny Đời Chó
             </span>
             <span class="list-top-movie-item-en">
-             倾城宠妃
+             Unleashed - Danny The Dog
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1861,21 +1861,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-hoach-dem-thu-sau" title="Kế hoạch đêm thứ Sáu">
+          <a class="list-top-movie-link" href="/phim-moi/batman-arkham-that-thu" title="Batman: Arkham Thất Thủ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-hoach-dem-thu-sau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/batman-arkham-that-thu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kế hoạch đêm thứ Sáu
+             Batman: Arkham Thất Thủ
             </span>
             <span class="list-top-movie-item-en">
-             Friday Night Plan
+             Batman: Assault on Arkham
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
