--- a/xem-phim-moi/dep-trai-thay-sai-sai/index.html
+++ b/xem-phim-moi/dep-trai-thay-sai-sai/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             15
+             16
             </dd>
             <br/>
            </dl>
@@ -1694,28 +1694,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1728,6 +1706,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1773,18 +1773,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-my-nhan-2" title="Cuộc Chiến Mỹ Nhân">
+          <a class="list-top-movie-link" href="/phim-moi/phong-tham-van-tay-ban-nha" title="Phòng thẩm vấn: Tây Ban Nha">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-my-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-tham-van-tay-ban-nha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Chiến Mỹ Nhân
+             Phòng thẩm vấn: Tây Ban Nha
             </span>
             <span class="list-top-movie-item-en">
-             Mei Ren She
+             Criminal: Spain
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hien-tuong-di-thuong" title="Hiện tượng dị thường">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hien-tuong-di-thuong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hiện tượng dị thường
+            </span>
+            <span class="list-top-movie-item-en">
+             Phenomena
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1795,62 +1817,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ven-man-su-that-phan-1" title="Vén Màn Sự Thật (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/cap-doi-bat-dac-di" title="Cặp Đôi Bất Đắc Dĩ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ven-man-su-that-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cap-doi-bat-dac-di-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vén Màn Sự Thật (Phần 1)
+             Cặp Đôi Bất Đắc Dĩ
             </span>
             <span class="list-top-movie-item-en">
-             Truth Be Told (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/la-phieu-mua-hang" title="Lá Phiếu Mua Hàng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/la-phieu-mua-hang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lá Phiếu Mua Hàng
-            </span>
-            <span class="list-top-movie-item-en">
-             섹스 이용권
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thao-xich-danny-doi-cho" title="Tháo Xích – Danny Đời Chó">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thao-xich-danny-doi-cho-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tháo Xích – Danny Đời Chó
-            </span>
-            <span class="list-top-movie-item-en">
-             Unleashed - Danny The Dog
+             Planes, Trains and Automobiles
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1861,21 +1839,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/batman-arkham-that-thu" title="Batman: Arkham Thất Thủ">
+          <a class="list-top-movie-link" href="/phim-moi/bay-vien-ngoc-rong-z-ke-manh-nhat" title="Bảy Viên Ngọc Rồng Z: Kẻ Mạnh Nhất">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/batman-arkham-that-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-vien-ngoc-rong-z-ke-manh-nhat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Batman: Arkham Thất Thủ
+             Bảy Viên Ngọc Rồng Z: Kẻ Mạnh Nhất
             </span>
             <span class="list-top-movie-item-en">
-             Batman: Assault on Arkham
+             Dragon Ball Z: The World's Strongest
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sep-trum" title="Sếp Trùm">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sep-trum-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sếp Trùm
+            </span>
+            <span class="list-top-movie-item-en">
+             Like a Boss
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
